--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,55 @@
     border-bottom: 1px solid #000;
     background-color: transparent;
   }
- 
+
+  .main-banner .box-fee{
+    position: absolute;
+    bottom: 140px;
+    right: 320px;
+    width: 400px;
+    height: 304px;
+    background: #fff;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+    padding: 28px 32px;
+  }
+
+  .box-fee form input{
+    font-size: 1rem;
+    width: 280px;
+    margin: 0 0 0 10px;
+    padding: 18px 0;
+    border: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0;
+    color: #212121;
+    height: auto;
+    line-height: normal;
+  }
+
+  .box-fee .btn{
+    margin-bottom: 0;
+    height: 56px;
+    line-height: 56px;
+    margin-right: 30px;
+  }
+
+  .box-fee .btn button{
+    float: right;
+    margin-top: 20px;
+    background-color: transparent;
+    border: 2px solid #72c31b;
+    border-radius: 30px;
+    color: #72c31b;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 700;
+    height: 40px;
+    padding: 0 32px;
+    text-align: center;
+    white-space: nowrap;
+  }
 
   /* Hero */
 
