--- a/css/admin.css
+++ b/css/admin.css
@@ -91,8 +91,7 @@
 	background: #fff;
 	display: flex;
 	align-items: center;
-	position: fixed;
-	width: calc(100% - 240px);
+	width: 100%;
 	left: 240px;
 	z-index: 100;
 	padding: 0 20px;
@@ -131,11 +130,14 @@ nav .sidebar-button i {
 	min-width: 60px;
 	text-align: center;
 }
+
+.home-section nav .profile-details i,span:hover {
+	cursor: pointer;
+}
+
 .home-section .home-content {
 	position: relative;
-	padding-top: 104px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 20px;
 }
 #snackbar {
 	visibility: hidden;
@@ -178,3 +180,90 @@ nav .sidebar-button i {
 	from {bottom: 30px; opacity: 1;}
 	to {bottom: 0; opacity: 0;}
 }
+
+/* Modal container */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+}
+
+/* Modal content */
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 30px;
+	border: 1px solid #888;
+	width: 375px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.modal .btn{
+	margin-top: 20px;
+}
+
+.close:hover,
+.close:focus {
+	color: black;
+	cursor: pointer;
+}
+
+.btn {
+	padding: 8px 16px;
+	border-radius: 10px;
+	border: none;
+	cursor: pointer;
+	color: white;
+  }
+
+  .btn-primary {
+	background-color: #00b2d8;
+	color: white;
+  }
+
+  .btn-primary:hover {
+	background-color: #009bbd;
+  }
+  
+  .btn-secondary {
+	background-color: #6c757d;
+	color: white;
+  }
+  
+  .btn-secondary:hover {
+	background-color: #5a6268;
+  }
+  
+/* profile */
+
+.form-pr0file {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 30%;
+	background-color: white;
+	padding: 30px;
+    padding-bottom: 50px;
+	margin: 0 auto;
+	box-shadow: 0 6px 12px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 10px;
+  }
+  
+  .form-profile .input {
+	width: 100%;
+	margin: 10px 0;
+	padding: 10px;
+    border: none;
+    border-bottom: 1px solid rgb(148, 148, 148)
+  }
+
+  #closeProfileModal{
+	display: block;
+	margin-left: auto;
+  }
